--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <div class="container4">
      <h2>Get In Touch</h2>
      <h3>if you are interested in me</h3>
-     <p class="contact">you can contact me for a building project plan, websites development, online arabic tutoring, an more....</p>
+     <p class="contact">you can contact me for your building project plan, websites development, online arabic tutoring, and many more....</p>
 <a class="btn" href="Contact-me.html">CONTACT ME</a>
  </div>
  <div class="container5">
